# generative

./: pyproject.toml
notebooks/.ipynb_checkpoints/: lines-checkpoint.ipynb
