[tool.poetry]
name = "generative"
version = "0.1.0"
description = ""
authors = ["Jeff Shen <jshen2014@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7.1,<3.11"
jax = "^0.3.5"
jaxlib = "^0.3.5"
matplotlib = "^3.5.1"
scipy = "1.7.3"
cmasher = "^1.6.3"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
